--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,14 +1,26 @@
-<h2>Reporter output</h2><table><tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: //input[@id='Email']] found</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: //input[@id='Password']] found</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: //div[@data-instituteid='5']] found</td></tr>
-<tr><td>Elemntlocated</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: (//span[@class='menuMaxSize'])[5]] is clickable</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: //button[@class='btn btn-success']] is clickable</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: //input[@id='txtDisplayName']] is clickable</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: (//span[@class='multiselect-selected-text'])[1]] is clickable</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: (//label[@class='radio-inline'])[1]] is clickable</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: (//label[@class='radio-inline'])[6]] is clickable</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: (//label[@class='radio-inline'])[7]] is clickable</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: //input[@id='ReportScheduleStartDate']] is clickable</td></tr>
-<tr><td>[[FirefoxDriver: firefox on WINDOWS (8422620b-d47a-4932-90a7-469eaf7726a0)] -> xpath: //input[@id='SaveReportScheduleBtn']] is clickable</td></tr>
+<h2>Reporter output</h2><table><tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //input[@id='Email']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //input[@id='Password']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //div[@data-instituteid='5']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //input[@id='addNewMenu']] is clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //input[@class='btn btn-success preventTagClose']] is clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//div[@class='col-sm-2 appMenuItemClass'])[last()]] is clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //select[@id='menus']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //span[.='App Config']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //a[.='Layer Menu']] is clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//select[@class='form-control'])[1]] is not clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//select[@class='form-control'])[2]] is not clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//select[@class='form-control'])[3]] is not clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //span[.='App Config']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //a[.='Data Description']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//select[@class='form-control'])[1]] not found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//select[@class='form-control'])[2]] is not clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//select[@class='form-control'])[3]] is not clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//select[@class='form-control'])[4]] is not clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //input[@id='savePageURLBtn']] is not clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //span[.='App Config']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //a[.='Menu Rearrangement']] is clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //h2[.='Menu Rearrangement']] found</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//div[@class='Active'])[1]] is clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: (//div[@class='Active'])[2]] is clickable</td></tr>
+<tr><td>[[FirefoxDriver: firefox on WINDOWS (88d75acb-a2a9-4228-adb8-cb074a930570)] -> xpath: //input[@id='save']] is clickable</td></tr>
 </table>
